# Inference-Service-Layer

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_ASSESSMENT.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  ENHANCEMENTS.md  ISL_REPOSITORY_ANALYSIS.md  OLUMI_ERROR_SCHEMA_IMPLEMENTATION.md  PLATFORM_IMPROVEMENTS_SUMMARY.md  PLATFORM_INFRASTRUCTURE_AUDIT.md  PLOT_INTEGRATION_CHECKLIST.md  PR_SYNC_MAIN.md  README.md  WORKSTREAM_INTEGRATION_STATUS.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  openapi.json  pyproject.toml  requirements-testing.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: security-remediation.md
.github/workflows/: config-validation.yml  deploy-production.yml  openapi-validation.yml  security.yml
benchmarks/: PERFORMANCE_REPORT.md  README.md  performance_benchmark.py
clients/typescript/: README.md  client.ts  hooks.ts  types.ts
deployment/redis/: docker-compose.redis.yml  redis.conf
docs/: API_QUICK_REFERENCE.md  CODE_QUALITY_REPORT.md  DEPLOYMENT_GUIDE.md  ERROR_RESPONSE_SCHEMA.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  P2-ISL-DESIGN.md  PILOT_READINESS.md  PLOT_ERROR_HANDLING.md  PLOT_INTEGRATION_GUIDE.md  PLOT_INTEGRATION_PATTERNS.md  REDIS_DEPLOYMENT.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  SECURITY_REMEDIATION_PLAN.md  TECHNICAL_SPECIFICATION.md  THREAT_MODEL.md  V1_DEPRECATION_TIMELINE.md  aggregation_methods.md  edge_cases.md  observability.md  openapi-gap-analysis.md  postman_collection.json  sequence_diagrams.md
docs/_archive/: API.md  API_EXAMPLES.md  CODE_ASSESSMENT.md  CROSS_REFERENCE_SCHEMA.md  ERROR_RECOVERY.md  FIXES_IMPLEMENTED.md  INTEGRATION.md  MONITORING_SETUP.md  OBSERVABILITY_GUIDE.md  OPTIMIZATION_REPORT.md  PERFORMANCE_RUNBOOK.md  PHASE1_ARCHITECTURE.md  PLOT_INTEGRATION_CHECKLIST.md  PLOT_INTEGRATION_GUIDE.md  PLOT_INTEGRATION_OVERVIEW.md  PLOT_PERFORMANCE_GUIDE.md  PR_DESCRIPTION.md  QUICK_DEPLOY.md  RATE_LIMIT_TEST_PLAN.md  REDIS_STRATEGY.md  REDIS_TROUBLESHOOTING.md  SECURITY_IMPROVEMENTS.md  SECURITY_REMEDIATION_PLAN.md  SLO_SLI_DEFINITIONS.md  STAGING_DEPLOYMENT_CHECKLIST.md  TECHNICAL_SPECIFICATIONS_OLD.md  TECHNICAL_SPECIFICATION_OLD.md  TEST_FAILURE_ANALYSIS.md  WORKSHOP_AGENDA.md
docs/api/: EXAMPLES.md
docs/audits/: ISL_GRAPH_OPERATIONS_AUDIT.md
docs/development/: OPTIMIZATION_ROADMAP.md
docs/features/: sequential-optimization.md  transportability.md
docs/integration/: ACTIVA_PREFERENCE_LEARNING.md  GUIDE.md  INTEGRATION_EXAMPLES.md  QUICK_REFERENCE.md
docs/operations/: DEPLOYMENT.md  MONITORING_SETUP.md  OBSERVABILITY_SETUP.md  PILOT_MONITORING_RUNBOOK.md  SENTRY_SETUP.md
docs/runbooks/: HIGH_LLM_COSTS.md
docs/security/: GUIDE.md
grafana/dashboards/: isl-deliberation.json  isl-llm-costs.json  isl-overview.json  isl-performance.json
isl-python-client/: LICENSE  README.md  pyproject.toml
isl-python-client/examples/: basic_validation.py  conformal_prediction.py
isl-python-client/isl_client/: __init__.py  causal.py  client.py  discovery.py  exceptions.py  explain.py  models.py  optimize.py  sync.py
isl-python-client/tests/: __init__.py  conftest.py  test_causal.py  test_client.py  test_discovery.py  test_error_handling.py  test_explain.py  test_sync.py
monitoring/: docker-compose.monitoring.yml
monitoring/alerts/: isl-alerts.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
scripts/: dev_cli.py  generate_openapi.py  generate_typescript.sh  profile_performance.py  validate_redis_performance.py
scripts/debug/: __init__.py  api_debug.py  belief_debug.py  causal_debug.py  preference_debug.py
scripts/performance/: performance_report.json  profile_endpoints.py
src/: __version__.py  config.py
src/api/: aggregation.py  analysis.py  batch.py  causal.py  cee.py  decision_robustness.py  deliberation.py  dependencies.py  dominance.py  explain.py  health.py  identifiability.py  main.py  metrics.py  outcomes.py  phase4.py  preferences.py  risk.py  robustness.py  teaching.py  team.py  threshold.py  utility.py  validation.py
src/clients/: __init__.py  plot_engine_client.py
src/config/: __init__.py  llm_config.py
src/constants/: __init__.py
src/infrastructure/: __init__.py  memory_cache.py  redis_client.py
src/middleware/: __init__.py  auth.py  circuit_breaker.py  observability.py  rate_limiting.py  request_limits.py
src/models/: critique.py  decision_robustness.py  deliberation.py  isl_metadata.py  metadata.py  phase1_models.py  plot_engine.py  representation.py  requests.py  response_v2.py  responses.py  robustness.py  robustness_v2.py  sensitivity.py  shared.py
src/services/: advanced_discovery_algorithms.py  advanced_validation_suggester.py  advanced_validator.py  batch_counterfactual_engine.py  bayesian_teacher.py  belief_updater.py  causal_discovery_engine.py  causal_representation_learner.py  causal_transporter.py  causal_validator.py  causal_validator_enhanced.py  cee_adapters.py  coherence_analyzer.py  common_ground_finder.py  conditional_recommender.py  conformal_predictor.py  consensus_generator_llm.py  continuous_optimizer.py  contrastive_explainer.py  correlation_validator.py  counterfactual_engine.py  decision_robustness_analyzer.py  dominance_analyzer.py  explanation_generator.py  feasibility_checker.py  (+20 more)
tests/: conftest.py
(+159 files in other folders)
