[tool.poetry]
name = "inference-service-layer"
version = "0.2.0-dev"
description = "Deterministic scientific computation core for Olumi's decision enhancement platform"
authors = ["Olumi Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Security-critical dependencies pinned to stable versions
# Updated 2025-11 for security patches and performance improvements
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.27.1"}
pydantic = "2.6.1"
pydantic-settings = "2.2.1"
# Scientific dependencies
y0 = "^0.2.4"
networkx = "^3.2"
numpy = "^1.26.0"
scipy = "^1.11.0"
# Logging and configuration
python-json-logger = "2.0.7"
python-dotenv = "1.0.1"
# Phase 1 dependencies - pinned for security
redis = "5.0.3"
prometheus-client = "0.20.0"
psutil = "^5.9.0"
# Phase 4A LLM dependencies - pinned for security
openai = "1.12.0"
anthropic = "0.21.3"
# Error tracking
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.11.0"
ruff = "^0.14.7"
mypy = "^1.7.0"
# Phase 1 testing dependencies
pytest-redis = "^3.0.2"
fakeredis = "^2.20.0"
# Property-based testing
hypothesis = "^6.92.0"
# Developer tooling
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting via ruff)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501"]  # line too long (handled by black)

[tool.ruff.isort]
# Import sorting configuration (replaces standalone isort)
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-branch"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "y0.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
